WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288858
Rare crash in RemoteLayerTreeDrawingAreaProxyMac::commitTransientZoom()
https://bugs.webkit.org/show_bug.cgi?id=288858
Summary
Rare crash in RemoteLayerTreeDrawingAreaProxyMac::commitTransientZoom()
Simon Fraser (smfr)
Reported
2025-02-28 12:44:25 PST
Crash reporting suggests there's a rare crash in RemoteLayerTreeDrawingAreaProxyMac::commitTransientZoom()
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2025-02-28 12:44:35 PST
rdar://138515249
Simon Fraser (smfr)
Comment 2
2025-02-28 12:47:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41652
EWS
Comment 3
2025-02-28 16:05:19 PST
Committed
291394@main
(a5164735c179): <
https://commits.webkit.org/291394@main
> Reviewed commits have been landed. Closing PR #41652 and removing active labels.
EWS
Comment 4
2025-03-04 16:54:33 PST
Committed
289651.222@safari-7621-branch
(236818a3c687): <
https://commits.webkit.org/289651.222@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2731 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug