Rare crash in RemoteLayerTreeDrawingAreaProxyMac::commitTransientZoom() https://bugs.webkit.org/show_bug.cgi?id=288858 rdar://138515249

Reviewed by Abrar Rahman Protyasha.

Crash data suggest that `scrollingCoordinatorProxy()->rootScrollingNodeID()` can return a std::nullopt
sometimes (i.e. no root node). The rootScrollingNodeID was only used for the testing-only
`deferWheelEventTestCompletionForReason` code path, so we can just skip that.

* Source/WebKit/UIProcess/RemoteLayerTree/mac/RemoteLayerTreeDrawingAreaProxyMac.h:
* Source/WebKit/UIProcess/RemoteLayerTree/mac/RemoteLayerTreeDrawingAreaProxyMac.mm:
(WebKit::RemoteLayerTreeDrawingAreaProxyMac::commitTransientZoom):
(WebKit::RemoteLayerTreeDrawingAreaProxyMac::sendCommitTransientZoom):

Canonical link: https://commits.webkit.org/291394@main